--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     working_directory: ~/code
     docker:
       - image: circleci/android:api-29-node
+      - image: circleci/openjdk:11-jdk
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -29,3 +30,7 @@ jobs:
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      - checkout
+      - run:
+          name: Analyze on SonarCloud
+          command: gradle build sonarqube"
