removed workfows chaged gradle to ./gradlew

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,4 @@ jobs:
       - checkout
       - run:
           name: Analyze on SonarCloud
-          command: gradle build sonarqube
-
-workflows:
-  main:
-    jobs:
-      - build:
-          context: SonarCloud
+          command: ./gradlew build sonarqube
