--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,4 +34,4 @@ jobs:
       - run:
           name: Analyze on SonarCloud
           command: chmod +x gradlew
-                    ./gradlew build sonarqube
+                    ./gradlew assembleDebug sonarqube
