--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
-version: 2
+version: 2.1
 jobs:
   build:
     working_directory: ~/code
     docker:
       - image: circleci/android:api-29-node
       - image: circleci/openjdk:11-jdk
+      - image: node:latest
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -30,8 +31,11 @@ jobs:
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
-      - checkout
-      - run:
-          name: Analyze on SonarCloud
-          command: chmod +x gradlew
-                    ./gradlew assembleDebug sonarqube
+      - sonarcloud/scan
+orbs:
+  sonarcloud: sonarsource/sonarcloud@1.0.0
+workflows:
+  main:
+    jobs:
+      - build:
+          context: sonarcloud
