--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
       - sonarcloud/scan
 orbs:
+  orb-tools: circleci/orb-tools@8.27.4
   sonarcloud: sonarsource/sonarcloud@1.0.0
 workflows:
   main:
